save bingo cards to pdf

--- a/SpotifyMusicBingo/SpotifyMusicBingo.csproj
+++ b/SpotifyMusicBingo/SpotifyMusicBingo.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="itext7" Version="7.1.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PDFsharp" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
