--- a/SpotifyMusicBingo/SpotifyMusicBingo.csproj
+++ b/SpotifyMusicBingo/SpotifyMusicBingo.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="PDFsharp" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BingoCards\" />
+  </ItemGroup>
+
 </Project>
